--- a/CapstoneMilestone.Rmd
+++ b/CapstoneMilestone.Rmd
@@ -5,9 +5,9 @@ date: "December 22, 2015"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+This will be my capstone milestone report.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+ut of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r}
 summary(cars)
