--- a/CapstoneMilestone.Rmd
+++ b/CapstoneMilestone.Rmd
@@ -5,30 +5,40 @@ date: "December 22, 2015"
 output: html_document
 ---
 
+# Summary
+
 This is my capstone milestone report.
 
-I will build a web application that supports text authors by predicting the next word given what (if anything) the user has typed so far. There will be 2 modes, 'Tweet' mode, and 'Normal' mode. Each mode will run the same code but they will use different models for prediction. The models will learn from appropriate sample writing. The Tweets mode will be trained against a selection of actual tweets. The normal mode will be trained against a selection of news stories and blog posts.
+I will build a web application that supports keyboard users by predicting the next word given what (if anything) the user has typed so far. There will be 2 modes, 'Tweet' mode, and 'Normal' mode. Each mode will run the same code but they will use different models for prediction. The models will learn from appropriate writing samples. The Tweet mode will be trained against a selection of actual tweets. The normal mode will be trained against a selection of news stories and blog posts.
 
-I am not going to use a dictionary (external wordlist) to inform my model. I am going to accept common mispellings as if they were words. The implication is that my application will support both normal users and users whose style is less formal.
+# Data
 
-I want my model to avoid suggesting profane words. I have defined a small set of profane words. To build the list, I used a Google search and also my own experience I included words that are almost allways offensive to a significant portion of the population. I am going to ignore all documents that use those words. An alternative to preserve the ngram information in those documents would be to replace the profane words with synonyms that are not profane. I judge that not to be a priority.
-
-The final application can be thought of as an introduction to this problem area, not "the solution" that one would really want. There are a number of ways to improve it. The models can be improve by increasing the range of training data. The functionality can be made more valuable by adding more modes and more languages. The simple back off model (for when the basic model has no prediction) can be replaced with something more realistic. More can be precomputed to speed up processing. Partial word support could be added so that the suggestions change as each letter is typed by the user. 
-
-
-```{r}
-summary(cars)
-```
-
-You can also
-
-![aaa](ExploratoryHistograms.png)
-
-embed plots, for example:
+That mode split is suggested by intuition and supported by some simple exploratory data analysis. I loaded the data with readLines (each line is its own source documents) and explored it with the quanteda package. I used its default settings for break up each document into its words (a process called tokenization) and collected interesting statistics from quanteda's corpus and dfm (Document Frequency Matrix) objects.
 
 ```{r, echo=FALSE}
-plot(cars)
+load('BasicStats.rda')
+BasicStats
 ```
+
+Note that the tweets data has a much lower average word count than the others and its ratio of distinct words to all words is out of range compared to the others.
+
+To visualize the average word count distinction, review these histograms:
+![aaa](ExploratoryHistograms.png)
+
+The tweets use a different vocabulary, too, compared to the other sources as hinted by these word clouds:
+![aaa](ExploratoryWordClouds.png)
+
+# Additional Detail
+
+I am not going to use a dictionary (external wordlist) to inform my model. I am going to treat common mispellings as if they were words. The implication is that my application will support both normal users and users whose style is less formal.
+
+I want my model to avoid suggesting profane words. I have defined a small set of profane words. To build the list, I used a Google search and also my own experience. I consider a word to be profane if it is almost allways offensive to a significant portion of the population. I am going to ignore all documents that use those words. An alternative to preserve the ngram information in those documents would be to replace the profane words with synonyms that are not profane. I judge that not to be a priority.
+
+The quanteda objects are large (double digit GB) enough that they can't used directly to produce predictions in a timely fashion. Fortunately, the most common word combinations (called ngrams) account for much of the predictive value. I will dramatically prune low occurrance combinations from the training data.
+
+My final application should be thought of as an introduction to this problem area, not "the solution" that one would really want. There are a number of ways to improve it. The models can be improved by increasing the range of training data. It would be especially helpful to include selections from additional sources, for instance text message data to improve tweet mode or book text data to improve normal mode. The functionality can be made more valuable by adding more modes and more languages. The simple back off model (for when the basic model has no prediction) can be replaced with something more realistic. More can be precomputed to speed up processing. Partial word support could be added so that the suggestions change as each letter is typed by the user. 
+
+The application will be written in R and built in Shiny. It will be hosted on RStudio's Shiny servers.
 
 # Acknowledgements and Notes
 
